# bilbo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  IDENTITY.md  LICENSE  README.md  SECURITY.md  TOOLS.md  USER.md  pyproject.toml
.claude/: settings.json
airgradient-logger/: Dockerfile  README.md  airgradient-logger.service  airgradient_logger.py  docker-compose.yml
context/: babybub-listing.md
dashboard/: app.py  requirements.txt
dashboard/static/: app.js  index.html  style.css  sw.js
deploy/: Dockerfile  Dockerfile.dashboard  docker-compose.smoke.yml  docker-compose.yml
docs/: api.md  code-tour.md  database-schema.md  design-decisions.md  postgres-migration.md  refactor-worklog.md  shadow-to-prod-playbook.md  training.md
memory/: 2026-03-28.md  2026-03-31.md  2026-04-01.md
references/: prompt.md
report/scripts/: report.py
report/scripts/lib/: config.py  loaders.py  monitor.py  output.py
scripts/: archive-frames.sh  bootstrap-models.sh
skills/airgradient-logger/: airgradient-logger.service  docker-compose.yml
skills/baby-monitor/: PLAN-face-detection.md  SKILL.md
skills/baby-monitor/dashboard/: app.py  aq_analysis.py  system_usage.py
skills/baby-monitor/dashboard/static/: app.js  index.html  manifest.webmanifest  style.css
skills/baby-monitor/data/: activity-log.md
skills/baby-monitor/pipeline/: README.md  config.yaml  requirements.txt  train_classifiers.py
skills/baby-monitor/references/: baby-profile.md  prompt.md
skills/baby-monitor/scripts/: backfill_birdeye_primary.py  backfill_state.py  bbox_impact.py  experiments_backfill.py  monitor.py  promote_experiment.py  report.py  requirements.txt  run_single_inference.py  train_classifiers.py  watchdog.py
skills/baby-monitor/scripts/lib/: __init__.py  alerts.py  capture.py  classifiers.py  cli.py  config.py  db.py  detect.py  experiments.json  experiments.py  local_pipeline.py  state.py  storage.py  training_state.py  vision.py
skills/baby-report/: SKILL.md
skills/baby-report/scripts/: report.py
skills/baby-report/scripts/lib/: __init__.py  config.py  loaders.py  monitor.py  output.py  sections.py  (+1 more)
skills/classifieds-poster/: SKILL.md
skills/classifieds-poster/references/: psp-format.md
skills/classifieds-poster/scripts/: post.py
src/bilbo/: alerts.py  capture_service.py  cli.py  config.py  experiments.json  experiments.py  monitor.py  state.py  train_classifiers.py  training_state.py  watchdog.py
src/bilbo/api/: __init__.py  air_quality.py  corrections.py  entries.py  frames.py  inference.py  models.py  recap.py  stats.py  system.py  training.py
src/bilbo/http/: app.py
src/bilbo/pipeline/: capture.py  classifiers.py  detect.py  local_pipeline.py  vision.py
src/bilbo/scripts/: backfill_birdeye_primary.py  backfill_state.py  bbox_impact.py  experiments_backfill.py  migrate_sqlite_to_postgres.py  promote_experiment.py  run_single_inference.py
src/bilbo/storage/: db.py  files.py
