[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bilbo"
version = "0.1.0"
description = "Baby bassinet monitor — RTSP capture, BIRDEYE on-device cascade, GPT-4o backstop."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [{name = "Shanit Vannala"}]

# Runtime-light deps shared by every container (control-api included).
# Things the BIRDEYE pipeline needs live in [project.optional-dependencies.ml].
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "certifi",
    # Postgres is the single source of truth (replaced the SQLite-over-bind-mount
    # setup that corrupted under concurrent multi-container access). psycopg3
    # binary build avoids needing libpq-dev in the slim images.
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
# On-device ML cascade — torch + opencv + the training/classifier stack.
# Only `capture` and `training` images need this.
# torch pinned to a version with both linux/arm64 and linux/amd64 wheels.
ml = [
    "torch>=2.1.0,<2.7",
    "torchvision>=0.16.0,<0.22",
    "opencv-python-headless>=4.8.0,<5",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0,<3",
    "openai>=1.20",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
]

# control-api container: Flask + docker SDK (for spawning training)
# + httpx (for proxying to capture:5557). NO torch.
control-api = [
    "flask>=3",
    "gunicorn>=21",
    "docker>=7",
    "httpx>=0.27",
]

# capture container: ml + Flask (POST /infer endpoint) + httpx (Telegram)
capture = [
    "torch>=2.1.0,<2.7",
    "torchvision>=0.16.0,<0.22",
    "opencv-python-headless>=4.8.0,<5",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0,<3",
    "openai>=1.20",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "flask>=3",
    "gunicorn>=21",
    "httpx>=0.27",
]

[project.scripts]
# Top-level pipeline + workers
bilbo-monitor       = "bilbo.monitor:main"
bilbo-watchdog      = "bilbo.watchdog:main"
bilbo-train         = "bilbo.cli:train_main"
bilbo-control-api   = "bilbo.http.app:main"
bilbo-capture       = "bilbo.capture_service:main"

# Operational scripts (also runnable as `python -m bilbo.scripts.<name>`)
bilbo-inference            = "bilbo.scripts.run_single_inference:main"
bilbo-backfill-state       = "bilbo.scripts.backfill_state:main"
bilbo-backfill-primary     = "bilbo.scripts.backfill_birdeye_primary:main"
bilbo-bbox-impact          = "bilbo.scripts.bbox_impact:main"
bilbo-promote-experiment   = "bilbo.scripts.promote_experiment:main"
bilbo-experiments-backfill = "bilbo.scripts.experiments_backfill:main"
bilbo-migrate-sqlite-to-pg = "bilbo.scripts.migrate_sqlite_to_postgres:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bilbo"]

[tool.hatch.build.targets.sdist]
include = ["src/bilbo", "references", "README.md", "pyproject.toml"]
